Тотальный рефакторинг: Обновление раздела League

--- a/src/main/resources/static/league/result_table/result_table.html
+++ b/src/main/resources/static/league/result_table/result_table.html
@@ -32,7 +32,7 @@
         <table class="table table-hover">
             <tr>
                 <td class="cell">...</td>
-                <td class="cell">AMK</td>
+                <td class="cell">AHM</td>
                 <td class="cell">ARS</td>
                 <td class="cell">CSK</td>
                 <td class="cell">DIN</td>
@@ -52,7 +52,7 @@
             <tbody>
                 <tr ng-repeat="m in Cortage">
                     <td class="cell">{{m.currentName}}</td>
-                    <td class="cell">{{m.withAmkar}}</td>
+                    <td class="cell">{{m.withAhmat}}</td>
                     <td class="cell">{{m.withArsenal}}</td>
                     <td class="cell">{{m.withCska}}</td>
                     <td class="cell">{{m.withDinamo}}</td>
