--- a/src/main/resources/static/main_menu/main_menu.html
+++ b/src/main/resources/static/main_menu/main_menu.html
@@ -54,7 +54,7 @@
 
 		<a class="main_link" href="../calendar/calendar.html">Calendar</a>
 		<div class="tryright">
-			<a class="main_link" href="http://">2</a>
+			<a class="main_link" href="../index.html">Exit</a>
 		</div>
 		<p></p>
 
