Доюавление возможности загрузки игры. 5 коммит

--- a/src/main/resources/static/new_day/match/match.html
+++ b/src/main/resources/static/new_day/match/match.html
@@ -37,7 +37,7 @@
 			<p><a class="links" href="../../team_menu/placement/placement.html">Select Start Team</a> </p>
 
 			<br>
-			<p><a class="links" ng-click="back()">Exit to Main Menu</a> </p>
+			<p><a class="links" href="../../main_menu/main_menu.html">Exit to Main Menu</a> </p>
 		</div>
 		<table class="col-sm-6 table table-hover">
 			<tr>
