--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,7 +24,7 @@
     <br>
     <h3 class="title">Russian League 2019/2020</h3>
     <a class="newGameText" href="registr/registr.html">New Game</a> <br> <br> <br>
-    <div class="right_link"><a class="loadGameText" href="">Load Game</a></div>
+    <div class="right_link"><a class="loadGameText" href="load_game/load_game.html">Load Game</a></div>
     <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
     <h5 class="bottom">sargassov &copy;</h5>
 
