--- a/src/main/resources/static/team_menu/placement/placement.html
+++ b/src/main/resources/static/team_menu/placement/placement.html
@@ -79,7 +79,7 @@
             <td class="cell">{{p.name}}</td>
             <td class="cell">{{p.position}}</td>
             <td class="cell">{{p.power}}</td>
-            <td><button class="btn btn-primary" ng-click="changePlayerInPlacement(p.name)">Change</button></td>
+            <td><button class="btn btn-primary" ng-click="changePlayerInPlacement(p.place)">Change</button></td>
             <td><button class="btn btn-primary" ng-click="deleteInPlacement(p.name)">{{p.name}} delete</button></td>
         </tr>
         </tbody>
